<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/connection_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/connection_status"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/stop_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/stop"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/connection_status_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/right_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@+id/connection_status_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop_button"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_right" />

    <ImageButton
        android:id="@+id/left_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@+id/connection_status_textview"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_left" />

    <ImageButton
        android:id="@+id/up_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/go_straight"
        app:layout_constraintBottom_toTopOf="@+id/stop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/down_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_button" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/connect_to_pc"
        app:layout_constraintBottom_toTopOf="@+id/toggle_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toTopOf="@+id/toggle_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/connection_status_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>